crates/bityzba/tests/ui/fail/enum_missing_variant_invariant.stderr
error: missing invariant for data-carrying enum variant `Named`; add `#[invariant(::Named => true)]` if the variant data already expresses the invariant
 --> tests/ui/fail/enum_missing_variant_invariant.rs:6:5
  |
6 |     Named { name: String },
  |     ^^^^^
